# prefect_training

./: alphavantage.py  code_deployment.py  docker-block-create.py  docker-block.py  get_daily_avg-deployment.yaml  meteo.py  pyproject.toml  stock.py
