[tool.poetry]
name = "prefect2training"
version = "0.1.0"
description = ""
authors = ["ejurotic <ejurotic@cisco.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prefect = "^2.4.5"
yfinance = "^0.1.75"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
